--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -5,12 +5,13 @@
             <div class="loginControls">
                 <mat-form-field appearance="fill" >
                     <mat-label>Email:</mat-label>
-                    <input matInput formControlName="email" required  placeholder="example@gmail.com">
+                    <input matInput placeholder="pat@example.com" formControlName="email" required  >
+                    <mat-icon matSuffix>email</mat-icon>
                     <mat-error>Invalid Email Address</mat-error>
-                </mat-form-field>
+                  </mat-form-field>
                 <mat-form-field appearance="fill" >
                     <mat-label>Password:</mat-label>
-                    <input matInput   [type]="hide ? 'password' : 'text'" formControlName="password"  name="password" required>
+                    <input matInput   [type]="hide ? 'password' : 'text'" formControlName="password"  name="password" required >
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
