savingproduct,displaying products,deleting product

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,19 @@
+<mat-toolbar color="primary">
+  my products
 
-<mat-toolbar class="bar">
-    <span>Dash Board</span>
-  </mat-toolbar>
-  <div>
-    <button mat-raised-button class="buttonrow"   color="warn" type="submit" (click)="onClick()" >logout</button>
-  </div>
+  
+</mat-toolbar>
+<app-create-product></app-create-product>
+<app-product-list></app-product-list>
+
+<div >
+   
+  <button mat-raised-button class="spacer"  color="warn" type="submit" (click)="onClick()" >logout</button>
+
+</div>
+
+
+  
+ 
   
 
