--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -26,7 +26,7 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef><b></b></mat-header-cell>
         <mat-cell *matCellDef="let row">
-            <button mat-icon-button (click)="onUpdate(row.productId)"  matTooltip="Edit">
+            <button mat-icon-button (click)="onUpdate(row)"  matTooltip="Edit">
                 <mat-icon>create</mat-icon>
             </button>
             <button mat-icon-button  (click)="onDelete(row.productId)"  color="warn"   matTooltip="delete">
